Design update (CSS)

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #f9f7fe;
-  font-family: "Roboto", sans-serif;
+  background-color: #818387;
+  font-family: "Caveat", cursive;
 }
 
 a {
-  color: purple;
+  color: #232465;
 }
 
 .weather-app {
@@ -26,18 +26,20 @@ header {
   border: none;
   border-radius: 6px;
   width: 80%;
-  font-size: 16px;
+  font-size: 20px;
   padding: 15px 20px;
+  font-family: "Caveat", cursive;
 }
 
 .search-form-button {
-  background: purple;
-  padding: 15px 30px;
+  background: #232465;
+  padding: 10px 25px;
   border: none;
-  font-size: 16px;
+  font-size: 25px;
   margin-left: 5px;
   border-radius: 6px;
   color: white;
+  font-family: "Caveat", cursive;
 }
 
 main {
@@ -51,19 +53,19 @@ main {
 
 .weather-app-city {
   margin: 0;
-  font-size: 38px;
+  font-size: 60px;
   line-height: 48px;
 }
 
 .weather-app-details {
-  font-size: 16px;
+  font-size: 30px;
   line-height: 24px;
   color: rgba(39, 33, 66, 0.4);
   font-weight: 500;
 }
 
 .weather-app-details strong {
-  color: #f65282;
+  color: #fc6a03;
 }
 
 .weather-app-temperature-container {
@@ -76,7 +78,7 @@ main {
 }
 
 .weather-app-temperature {
-  font-size: 88px;
+  font-size: 90px;
   font-weight: bold;
   line-height: 88px;
   margin-left: 10px;
@@ -84,13 +86,13 @@ main {
 
 .weather-app-unit {
   margin-top: 16px;
-  font-size: 28px;
+  font-size: 30px;
 }
 
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
   text-align: center;
-  font-size: 14px;
+  font-size: 18px;
   color: rgba(0, 0, 0, 0.6);
 }
