--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,10 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 
 .weather-app-temperature {
