--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ main {
 }
 
 .weather-app-details strong {
-  color: #fc6a03;
+  color: #008400;
 }
 
 .weather-app-temperature-container {
@@ -93,18 +93,34 @@ main {
 }
 
 .weather-forecast {
+  display: flex;
+  justify-content: space-around;
   margin-top: 20px;
-  text-align: center;
   color: #000000;
 }
 
 .weather-forecast-date {
-  font-size: 16px;
-  opacity: 0.5;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+}
+
+.weather-forecast-temperatures {
+  color: #008400;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .weather-app-temperature-min {
+  font-size: 20px;
   opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  padding: 0 10px;
 }
 
 footer {
